--- a/my-first-app/angular.json
+++ b/my-first-app/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["moment"],
             "outputPath": "dist/my-first-app",
             "index": "src/index.html",
             "main": "src/main.ts",
